# FizzSwap

./: .dockerignore  .env.example  .gitignore  .solhint.json  .vercelignore  ARCHITECTURE.md  Dockerfile  ECOSYSTEM_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  README.md  README_DOCKER.md  SECURITY.md  docker-compose.yml  hardhat.config.ts  jest.config.js  package-lock.json  package.json  vercel.json
.agentx/: README.md  agents.json
.copilot/: README.md  agent.md  bootstrap.md  memory.md
.github/agents/: agent.md  web3-specialist.md
.github/workflows/: ci.yml  docker-image.yml
contracts/: FeeOnTransferToken.sol  FizzDex.sol  FizzToken.sol
docs/: DEPLOYMENT.md  EXAMPLE.md  README.md
programs/fizzdex-solana/: Cargo.toml
programs/fizzdex-solana/src/: lib.rs
relayer/: .dockerignore  Dockerfile  README.md  README_DEPLOY.md  docker-entrypoint.sh  init-mappings.js  jest.config.js  package-lock.json  package.json  tsconfig.json
relayer/src/: chain-adapter.ts  handlers.ts  index.ts  solana-htlc.ts  worker.ts
relayer/src/adapters/: bitcoin-adapter.ts  evm-adapter.ts  solana-adapter.ts  (+1 more)
scripts/: deploy-evm.ts  htlc-relayer.ts
src/: chain-adapter.js  chain-adapter.ts  index.ts  route-aggregator.ts
src/adapters/: evm-adapter.js  evm-adapter.ts  solana-adapter.js
test/: FizzDex.test.ts  evm-adapter.test.ts  execute-route-evm.test.ts  execute-route.test.ts  solana-adapter.test.ts  solana-execute-onchain.test.ts
web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
(+10 files in other folders)
