[package]
name = "fizzdex-solana"
version = "0.1.0"
description = "Solana program for FizzDex - Universal multi-chain DEX with Fizz Caps game"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fizzdex_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
